--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta
-      name="description"
+      name="Night Witches SWS Clan Website"
       content="The Star Wars Squadrons Clan. Competitive and casual play in an LGBT+ friendly environment. All welcoming people are welcome!" />
     <title>Night Witches</title>
   </head>
